# openai_proxy

./: .env.example  Containerfile  README.md  compose.yaml  pyproject.toml  run.sh
docs/: implementation-guide.md  requirements.md  technical-design.md
src/: config.py  converter.py  main.py  models.py  streaming.py
tests/: test_converter.py
